--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ho3eintayebi/sample.git",
+  "homepage": "https://github.com/ho3eintayebi/sample-react-app.git",
   "name": "sample",
   "private": true,
   "version": "0.0.0",
